--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ Above all, having notable social interests and strong interpersonal skills made 
 <p>· Healthy Leaves Detection Using Multi-SVM Approach</p>
 <p>· Grapical Password Authentication</p>
 <p>· Fake News Detection</p>
-<h3>Certificate Courses:</h3>
+<h3>Personal Traits:</h3>
 <p>· The ability to express my views easily with my good communication skills. <br>
 · Avid Problem Solver.<br>
 · Enthusiasm to Learn New Technologies. <br>
