--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@ Above all, having notable social interests and strong interpersonal skills made 
 <h3>Hobbies:</h3>
 <p>·Reading books and blogs.<br>·Social services.<br>·Sketching and Painting various things around me.</p>
 <h3>Personal Profile:</h3>
-<p><b>Name:</b> Chintakula Jyothi<br><b>Father's Name:</b>Chintakula Srinivasarao<br> <b>Date of birth:</b>12-12-1999<br><b>languages known:</b>Telugu,hindi,English<br></p>
+<p><b>Name:</b> Chintakula Jyothi<br><b>Father's Name:</b>Chintakula Srinivasa rao<br> <b>Date of birth:</b>12-12-1999<br><b>languages known:</b>Telugu,hindi,English<br></p>
 <h3>Declaration:</h3>
 <p>I hereby declare that the above-mentioned information is correct up to my knowledge and I bear the responsibility for the correctness of the above-mentioned particulars.</p>
 <p><b>Place:</b>Hyderabad<br><b>Date:</b>15-03-2021</p>
 
 
 </body>
-</html>.
+</html>
